# QT_FILE_READER

./: CMakeLists.txt  README.md  input.txt  main.cpp  reader.cpp  reader.h
